# python_projects

./: README.md
python_ai_projects/python_ai_assistant/: .env  app.py  main.py  pyproject.toml
python_ai_projects/resume_critique/: main.py  pyproject.toml
